--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ body {
 
 #prefetch {
   display: inline-block;
-  margin-left: 24px;
+  margin-left: 16px;
   vertical-align: text-bottom;
 }
 
@@ -40,21 +40,23 @@ body {
     to   { opacity: 1; }
 }
 
+.twitter-typeahead {
+  background: rgb(66, 66, 186);
+}
 
 .tt-input, /* UPDATE: newer versions use tt-input instead of tt-query */
 .tt-hint {
-    width: 396px;
+    background-color: rgb(66, 66, 186) !important;
+    color: white;
+    width: 300px;
     height: 30px;
-    padding: 8px 12px;
     font-size: 24px;
     line-height: 30px;
-    border: 2px solid #ccc;
-    border-radius: 8px;
     outline: none;
-}
-
-.tt-input { /* UPDATE: newer versions use tt-input instead of tt-query */
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    border-bottom: 1px solid white;
+    border-top: none;
+    border-left: none;
+    border-right: none;
 }
 
 .tt-hint {
@@ -62,7 +64,7 @@ body {
 }
 
 .tt-menu { /* UPDATE: newer versions use tt-menu instead of tt-dropdown-menu */
-    width: 422px;
+    width: 312px;
     margin-top: 12px;
     padding: 8px 0;
     background-color: #fff;
