--- a/main.css
+++ b/main.css
@@ -15,6 +15,11 @@ body {
   height:50px;
 }
 
+.logo {
+  height:50%;
+  width:10%;
+  margin-bottom:20px;
+}
 .fadeIn {
     -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
        -moz-animation: fadein 2s; /* Firefox < 16 */
@@ -25,6 +30,7 @@ body {
 
 .introRoot {
   text-align: center;
+  margin-top:200px;
 }
 
 .introRoot h1,
