--- a/main.css
+++ b/main.css
@@ -13,6 +13,12 @@ body {
   position:relative;
   font-size:36px;
   height:50px;
+  font-weight:600;
+  background: url(new_arrow.png) no-repeat right;
+  border:none;
+  box-shadow:none;
+  color:#8DD397;
+  appearance:none;
 }
 
 .logo {
