--- a/main.css
+++ b/main.css
@@ -166,3 +166,9 @@ body {
 .hidden-button {
   display: none;
 }
+
+*:focus {
+  outline: none;
+  box-shadow: none!important;
+  border:none!important;
+}
